--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.2"
@@ -32,6 +33,7 @@ ext {
     coroutines = '1.3.9'
     lifecycleVersion = '2.2.0'
     materialVersion = '1.2.1'
+    transformationLayoutVersion = '1.0.8'
     roomVersion = '2.2.5'
     // testing
     junitVersion = '4.13.1'
