--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,8 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayoutVersion"
     implementation "com.google.android.material:material:$rootProject.materialVersion"
     implementation "com.github.skydoves:transformationlayout:$rootProject.transformationLayoutVersion"
+    implementation "com.github.florent37:materialtextfield:$rootProject.materialTextFieldVersion"
+    implementation "com.shawnlin:number-picker:$rootProject.numberPickerVersion"
 
     // Testing
     testImplementation "junit:junit:$rootProject.junitVersion"
