--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,9 +66,11 @@ dependencies {
     // UI
     implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayoutVersion"
     implementation "com.google.android.material:material:$rootProject.materialVersion"
+    implementation "com.android.support:recyclerview-selection:$rootProject.recyclerSelectionVersion"
     implementation "com.github.skydoves:transformationlayout:$rootProject.transformationLayoutVersion"
     implementation "com.github.florent37:materialtextfield:$rootProject.materialTextFieldVersion"
     implementation "com.shawnlin:number-picker:$rootProject.numberPickerVersion"
+    implementation "androidx.cardview:cardview:1.0.0"
 
     // Testing
     testImplementation "junit:junit:$rootProject.junitVersion"
