--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,12 +44,14 @@ android {
 dependencies {
     implementation "androidx.appcompat:appcompat:$rootProject.appCompatVersion"
     implementation "androidx.activity:activity-ktx:$rootProject.activityVersion"
+    implementation 'androidx.fragment:fragment-ktx:1.3.0'
 
     // Dependencies for working with Architecture components
     // You'll probably have to update the version numbers in build.gradle (Project)
 
     // Room components
     implementation "androidx.room:room-ktx:$rootProject.roomVersion"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt "androidx.room:room-compiler:$rootProject.roomVersion"
     androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersion"
 
@@ -71,6 +73,8 @@ dependencies {
     implementation "com.github.florent37:materialtextfield:$rootProject.materialTextFieldVersion"
     implementation "com.shawnlin:number-picker:$rootProject.numberPickerVersion"
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation 'com.github.hackware1993:MagicIndicator:1.7.0'
 
     // Testing
     testImplementation "junit:junit:$rootProject.junitVersion"
