--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,11 +68,10 @@ dependencies {
     // UI
     implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayoutVersion"
     implementation "com.google.android.material:material:$rootProject.materialVersion"
-    implementation "com.android.support:recyclerview-selection:$rootProject.recyclerSelectionVersion"
     implementation "com.github.skydoves:transformationlayout:$rootProject.transformationLayoutVersion"
-    implementation "com.github.florent37:materialtextfield:$rootProject.materialTextFieldVersion"
     implementation "com.shawnlin:number-picker:$rootProject.numberPickerVersion"
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'androidx.fragment:fragment-ktx:1.3.0'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation 'com.github.hackware1993:MagicIndicator:1.7.0'
 
