--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.IPlant">
-        <activity android:name=".ui.InfoActivity"></activity>
-        <activity android:name=".ui.NewPlantActivity" />
+        <activity android:name=".ui.InfoActivity" />
+        <activity android:name=".ui.AddEditPlantActivity" />
         <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
