--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon May 03 23:30:58 CEST 2021
-sdk.dir=/home/oleksy/Android/Sdk
+#Mon May 10 16:30:00 CEST 2021
+sdk.dir=C\:\\Users\\Gabi\\AppData\\Local\\Android\\Sdk
