--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon May 10 16:30:00 CEST 2021
-sdk.dir=C\:\\Users\\Gabi\\AppData\\Local\\Android\\Sdk
+#Tue May 18 18:36:03 CEST 2021
+sdk.dir=/home/patryk/Android/Sdk
