--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.3.0'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation 'com.github.hackware1993:MagicIndicator:1.7.0'
+    implementation 'com.applandeo:material-calendar-view:1.9.0-rc03'
 
     // Testing
     testImplementation "junit:junit:$rootProject.junitVersion"
