--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.iplant">
+
     <uses-feature android:name="android.hardware.camera.any" />
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -15,7 +17,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.IPlant">
-        <activity android:name=".MediaAPI.CameraActivity"></activity>
+        <activity android:name=".ui.GalleryActivity"></activity>
+        <activity android:name=".MediaAPI.CameraActivity" />
         <activity android:name=".ui.InfoActivity" />
         <activity android:name=".ui.AddEditPlantActivity" />
         <activity android:name=".ui.MainActivity">
